--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env"],
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": [">=5%"]
+      },
+      "loose": true,
+      "useBuiltIns": true
+    }]
+  ]
 }
